@@ -1,3 +1,10 @@
+2007-10-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-find-foreign-file-name-handler): Check also
+	host.
+	(tramp-maybe-send-script): Apply `member' but `memq'.
+	(tramp-advice-file-expand-wildcards): Simplify implementation.
+
 2007-10-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (top): Move loading of tramp-util.el and tramp-vc.el to
